--- a/index.html
+++ b/index.html
@@ -2,20 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Bridge Incidents — CSV (coordinates (lat, lon))</title>
+  <title>Bridge Incidents — XLSX upload (merged types)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Leaflet -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-  <!-- MarkerCluster (optional) -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
-  <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
-
-  <!-- PapaParse for CSV -->
-  <script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
+  <!-- SheetJS for Excel -->
+  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 
   <style>
     html, body, #map { height: 100%; margin: 0; }
@@ -39,20 +34,23 @@
       padding: 6px 8px; border-radius: 6px; font: 12px/1.2 system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       box-shadow: 0 1px 4px rgba(0,0,0,0.15); max-width: 60vw; overflow: auto; max-height: 30vh; white-space: pre-wrap;
     }
-    select { padding: 4px 6px; }
+    select, input[type="file"] { padding: 4px 6px; }
   </style>
 </head>
 <body>
   <div id="map"></div>
 
   <div class="topbar">
+    <label for="file"><strong>Upload .xlsx:</strong></label>
+    <input id="file" type="file" accept=".xlsx,.xls" />
     <label for="typeFilter"><strong>Incident type:</strong></label>
     <select id="typeFilter"><option value="__ALL__">All types</option></select>
   </div>
 
-  <pre class="status" id="status">Loading…</pre>
+  <pre class="status" id="status">Choose an .xlsx file to plot…</pre>
 
   <script>
+    // --- Map ---
     const map = L.map('map', { preferCanvas: true }).setView([31, -99], 6);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       maxZoom: 19, attribution: '&copy; OpenStreetMap contributors'
@@ -60,51 +58,24 @@
 
     const status = document.getElementById('status');
     const typeFilter = document.getElementById('typeFilter');
+    const fileInput = document.getElementById('file');
 
-    // CONFIG: change if your CSV uses a different column for incident type
+    // If your sheet uses a different column for the incident type, change this:
     const INCIDENT_KEY = 'Incident Type';
 
-    // Helpers
-    function sanitizeText(txt) {
-      return txt.replace(/\bNaN\b/g, '')
-                .replace(/\b-Infinity\b/g, '')
-                .replace(/\bInfinity\b/g, '');
-    }
+    // --- Helpers ---
     function keyLookup(obj, patterns) {
       const keys = Object.keys(obj || {});
       const found = keys.find(k => patterns.some(rx => rx.test(k)));
       return found || null;
     }
-    function looksSwapped(lon, lat) {
-      // lon looks like a latitude and lat looks like a longitude
-      return Math.abs(lon) <= 90 && Math.abs(lat) > 90 && Math.abs(lat) <= 180;
-    }
-    function normalizeType(v) {
-      if (v == null) return null;
-      v = String(v).toLowerCase().replace(/[_-]+/g, ' ').replace(/\s+/g, ' ').trim();
-      const dict = {
-        'flooding': 'flood',
-        'floods': 'flood',
-        'fires': 'fire',
-        'collisions': 'collision',
-        'overloaded truck': 'vehicle overload',
-        'truck overload': 'vehicle overload',
-        'vehicle overloads': 'vehicle overload'
-      };
-      if (dict[v]) return dict[v];
-      if (/ies$/.test(v)) v = v.replace(/ies$/, 'y');
-      else if (/(ses|xes|zes|ches|shes)$/.test(v)) v = v.replace(/es$/, '');
-      else if (v.endsWith('s') && !v.endsWith('ss')) v = v.slice(0, -1);
-      return v;
-    }
-    function titleCase(s) {
-      return String(s).replace(/\w\S*/g, t => t[0].toUpperCase() + t.slice(1).toLowerCase());
-    }
+    function looksSwapped(lon, lat) { return Math.abs(lon) <= 90 && Math.abs(lat) > 90 && Math.abs(lat) <= 180; }
+    function titleCase(s) { return String(s).replace(/\w\S*/g, t => t[0].toUpperCase()+t.slice(1).toLowerCase()); }
     function makePopup(props) {
       if (!props) return '';
       const rows = [];
       const isUrl = v => typeof v === 'string' && /^https?:\/\//i.test(v);
-      const domainText = url => { try { return new URL(url).hostname.replace(/^www\./, ''); } catch { return url; } };
+      const domainText = url => { try { return new URL(url).hostname.replace(/^www\./,''); } catch { return url; } };
       for (const [k, rawV] of Object.entries(props)) {
         if (rawV === null || rawV === undefined) continue;
         let v = String(rawV).trim();
@@ -115,161 +86,200 @@
       return `<div style="font:13px/1.3 system-ui, Segoe UI, Roboto, Arial;"><table>${rows.join('')}</table></div>`;
     }
 
-    const palette = ["#e41a1c","#377eb8","#4daf4a","#984ea3","#ff7f00","#a65628","#f781bf","#999999",
-                     "#66c2a5","#fc8d62","#8da0cb","#e78ac3","#a6d854","#ffd92f","#e5c494","#b3b3b3"];
-    function colorMapFor(types) {
-      const m = {};
-      types.forEach((t,i) => m[t] = palette[i % palette.length]);
-      return m;
-    }
+    // PALETTE WITHOUT RED
+    const palette = [
+      "#377eb8", "#4daf4a", "#984ea3", "#ff7f00", "#a65628", "#f781bf", "#999999",
+      "#66c2a5", "#8da0cb", "#e78ac3", "#a6d854", "#ffd92f", "#e5c494", "#b3b3b3",
+      "#80b1d3", "#bebada"
+    ];
+    function colorMapFor(types){ const m={}; types.forEach((t,i)=>m[t]=palette[i%palette.length]); return m; }
 
-    // Parse a single "coordinates (lat, lon)" value into {lat, lon}
+    // Parse a single "coordinates (lat, lon)" field into {lat, lon}
     function parseCoordsField(val) {
       if (val == null) return null;
       const s = String(val).trim();
-      // Extract first two numbers (handles "29.76, -95.36", "(29.76, -95.36)", "[29.76, -95.36]", "POINT(-95.36 29.76)" etc.)
       const m = s.match(/-?\d+(?:\.\d+)?/g);
       if (!m || m.length < 2) return null;
-
-      let lat = parseFloat(m[0]);
-      let lon = parseFloat(m[1]);
-
-      // Handle WKT-like "POINT(lon lat)" if exported that way
-      if (Math.abs(lat) > 90 && Math.abs(lon) <= 90) {
-        const tmp = lat; lat = lon; lon = tmp;
-      }
+      let lat = parseFloat(m[0]), lon = parseFloat(m[1]);
+      if (Math.abs(lat) > 90 && Math.abs(lon) <= 90) { const t = lat; lat = lon; lon = t; } // WKT-style
       if (!isFinite(lat) || !isFinite(lon)) return null;
       return { lat, lon };
     }
 
-    // Load CSV -> rows -> features
-    fetch('Bridge_incident1.csv', { cache: 'no-store' })
-      .then(r => r.text())
-      .then(txt => {
-        const csvText = sanitizeText(txt);
-        const parsed = Papa.parse(csvText, { header: true, dynamicTyping: true, skipEmptyLines: true });
-        const rows = parsed.data;
+    // --- XLSX reading from an uploaded file ---
+    async function readXlsxFromFile(file) {
+      const buf = await file.arrayBuffer();
+      const wb = XLSX.read(buf, { type: 'array' });
+      if (!wb.SheetNames.length) throw new Error('Workbook has no sheets');
+      const sheet = wb.Sheets[wb.SheetNames[0]];
+      return XLSX.utils.sheet_to_json(sheet, { defval: '', raw: true }); // array of row objects
+    }
 
-        if (!rows.length) throw new Error('CSV seems empty.');
+    // ---- INCIDENT TYPE NORMALIZATION + MERGING ----
+    // Canonical buckets we want to show
+    const DISPLAY_LABELS = {
+      'vehicle collision': 'Vehicle Collision',
+      'structural issue': 'Structural Issue'
+      // everything else falls back to titleCase(norm)
+    };
 
-        // Detect coordinate columns/field
-        const sample = rows[0] || {};
-        const latKey   = keyLookup(sample, [/^lat(i(tude)?)?$/i]);
-        const lonKey   = keyLookup(sample, [/^(lon(g(itude)?)?|lng)$/i]);
-        const coordKey = keyLookup(sample, [/^coordinates?\s*\(\s*lat\s*,\s*lon\s*\)$/i]); // "coordinates (lat, lon)"
+    function normalizeType(v) {
+      if (v == null) return null;
+      v = String(v).toLowerCase().replace(/[_-]+/g, ' ').replace(/\s+/g, ' ').trim();
+      if (!v) return null; // prevent blank category (removes the first empty dot)
 
-        if (!((latKey && lonKey) || coordKey)) {
-          throw new Error('Could not find latitude/longitude columns or a "coordinates (lat, lon)" column.');
+      // unify common plurals
+      if (/ies$/.test(v)) v = v.replace(/ies$/, 'y');
+      else if (/(ses|xes|zes|ches|shes)$/.test(v)) v = v.replace(/es$/, '');
+      else if (v.endsWith('s') && !v.endsWith('ss')) v = v.slice(0, -1);
+
+      // merge synonyms / buckets:
+      const alias = {
+        // vehicle bucket
+        'vehicle collision': 'vehicle collision',
+        'vehicle overload':  'vehicle collision',
+        'overloaded truck':  'vehicle collision',
+        'truck overload':    'vehicle collision',
+        'overload truck':    'vehicle collision',
+        // structural bucket
+        'structure failure': 'structural issue',
+        'structural failure':'structural issue',
+        'hole found in bridge': 'structural issue',
+        'hole on bridge':       'structural issue'
+      };
+      if (alias[v]) v = alias[v];
+
+      return v;
+    }
+
+    function displayLabel(norm) {
+      return DISPLAY_LABELS[norm] || titleCase(norm);
+    }
+
+    // --- plotting state ---
+    let currentLayer = null;        // L.FeatureGroup holding current markers
+    let groupsByType = {};          // { normType: Marker[] }
+    let allMarkers = [];            // all markers
+
+    async function plotFromRows(rows) {
+      if (!rows.length) throw new Error('Sheet seems empty.');
+      const sample = rows[0] || {};
+      const latKey   = keyLookup(sample, [/^lat(i(tude)?)?$/i]);
+      const lonKey   = keyLookup(sample, [/^(lon(g(itude)?)?|lng)$/i]);
+      const coordKey = keyLookup(sample, [/^coordinates?\s*\(\s*lat\s*,\s*lon\s*\)$/i]);
+
+      if (!((latKey && lonKey) || coordKey)) {
+        throw new Error('Could not find latitude/longitude columns or a "coordinates (lat, lon)" column.');
+      }
+
+      const features = [];
+      for (const r of rows) {
+        let lat, lon;
+        if (coordKey) {
+          const pair = parseCoordsField(r[coordKey]); if (!pair) continue;
+          ({ lat, lon } = pair);
+        } else {
+          lat = parseFloat(r[latKey]); lon = parseFloat(r[lonKey]);
         }
+        if (!isFinite(lat) || !isFinite(lon)) continue;
+        if (looksSwapped(lon, lat)) { const t = lat; lat = lon; lon = t; }
+        features.push({ type:"Feature", properties:r, geometry:{ type:"Point", coordinates:[lon, lat] }});
+      }
+      if (!features.length) throw new Error('No valid coordinates parsed from sheet.');
 
-        const features = [];
-        for (const r of rows) {
-          let lat, lon;
+      // Clear previous stuff
+      if (currentLayer) { map.removeLayer(currentLayer); currentLayer = null; }
+      document.querySelectorAll('.legend').forEach(el => el.remove());
+      typeFilter.value = '__ALL__';
+      for (let i = typeFilter.options.length - 1; i >= 1; i--) typeFilter.remove(i);
+      groupsByType = {};
+      allMarkers = [];
 
-          if (coordKey) {
-            const pair = parseCoordsField(r[coordKey]);
-            if (!pair) continue;
-            ({ lat, lon } = pair); // (lat, lon)
-          } else {
-            lat = parseFloat(r[latKey]);
-            lon = parseFloat(r[lonKey]);
-          }
+      // Build filter + colors
+      const typeSet = new Set();
+      for (const f of features) {
+        const norm = normalizeType(f.properties?.[INCIDENT_KEY]);
+        if (norm != null) typeSet.add(norm);
+      }
+      const typeValues = Array.from(typeSet).sort();
+      const colors = colorMapFor(typeValues);
+      for (const norm of typeValues) {
+        const opt = document.createElement('option'); opt.value = norm; opt.textContent = displayLabel(norm);
+        typeFilter.appendChild(opt);
+        groupsByType[norm] = [];
+      }
 
-          if (!isFinite(lat) || !isFinite(lon)) continue;
+      // Create markers
+      for (const f of features) {
+        const tNorm = normalizeType(f.properties?.[INCIDENT_KEY]);
+        if (tNorm == null) continue; // skip blank/unknown -> no first dot
+        const [lon, lat] = f.geometry.coordinates;
+        const marker = L.circleMarker([lat, lon], {
+          radius: 7,
+          fillColor: colors[tNorm] || '#666',
+          color: '#333',
+          weight: 1,
+          opacity: 1,
+          fillOpacity: 0.9
+        }).bindPopup(makePopup(f.properties));
+        groupsByType[tNorm].push(marker);
+        allMarkers.push(marker);
+      }
 
-          // Safety swap if someone mixed the order
-          if (looksSwapped(lon, lat)) { const tmp = lat; lat = lon; lon = tmp; }
+      // Add initial layer (all markers)
+      currentLayer = L.featureGroup(allMarkers).addTo(map);
+      const b = currentLayer.getBounds(); if (b.isValid()) map.fitBounds(b.pad(0.1));
 
-          features.push({
-            type: "Feature",
-            properties: r,
-            geometry: { type: "Point", coordinates: [lon, lat] } // GeoJSON order
-          });
-        }
-
-        if (!features.length) throw new Error('No valid coordinates parsed from CSV.');
-
-        // Type normalization & palette
-        const typeLabelMap = new Map();
-        for (const f of features) {
-          const norm = normalizeType(f.properties?.[INCIDENT_KEY]);
-          if (norm != null && !typeLabelMap.has(norm)) typeLabelMap.set(norm, titleCase(norm));
-        }
-        const typeValues = Array.from(typeLabelMap.keys()).sort();
-        const colors = colorMapFor(typeValues);
-
-        // Populate filter UI
+      // Legend
+      const legend = L.control({ position:'topright' });
+      legend.onAdd = function() {
+        const div = L.DomUtil.create('div','legend');
+        const h = document.createElement('div'); h.textContent = 'Incident Type';
+        h.style.fontWeight='600'; h.style.marginBottom='6px';
+        div.appendChild(h);
         for (const norm of typeValues) {
-          const opt = document.createElement('option');
-          opt.value = norm; opt.textContent = typeLabelMap.get(norm);
-          typeFilter.appendChild(opt);
+          const label = displayLabel(norm);
+          if (!label) continue; // safety; skip blanks
+          const row = document.createElement('div'); row.className='row';
+          const sw = document.createElement('span'); sw.className='swatch'; sw.style.background = colors[norm];
+          const lab = document.createElement('span'); lab.textContent = label;
+          row.appendChild(sw); row.appendChild(lab); div.appendChild(row);
         }
+        return div;
+      };
+      legend.addTo(map);
 
-        // Build layers + clusters (circle dots)
-        const groupsByType = {};
-        typeValues.forEach(norm => groupsByType[norm] = L.layerGroup());
-        let allCluster = null;
-        const cluster = L.markerClusterGroup({ spiderfyOnMaxZoom:true, showCoverageOnHover:false, maxClusterRadius:50 });
+      status.textContent = `Plotted ${allMarkers.length} points. Types: ${typeValues.length}`;
 
-        for (const f of features) {
-          const tNorm = normalizeType(f.properties?.[INCIDENT_KEY]);
-          if (tNorm == null) continue;
-          const [lon, lat] = f.geometry.coordinates;
-          const m = L.circleMarker([lat, lon], {
-            radius: 6,
-            fillColor: colors[tNorm] || '#666',
-            color: '#333',
-            weight: 1,
-            opacity: 1,
-            fillOpacity: 0.9
-          }).bindPopup(makePopup(f.properties));
-          groupsByType[tNorm].addLayer(m);
-          cluster.addLayer(m);
+      // Filtering (rebuild the featureGroup)
+      typeFilter.onchange = () => {
+        if (currentLayer) map.removeLayer(currentLayer);
+        let markersToShow = [];
+        if (typeFilter.value === '__ALL__') {
+          markersToShow = allMarkers;
+        } else {
+          markersToShow = groupsByType[typeFilter.value] || [];
         }
+        currentLayer = L.featureGroup(markersToShow).addTo(map);
+        const bb = currentLayer.getBounds(); if (bb.isValid()) map.fitBounds(bb.pad(0.1));
+        const label = (typeFilter.value === '__ALL__') ? 'ALL types' : `"${typeFilter.selectedOptions[0].textContent}"`;
+        status.textContent = `Showing ${label}. Points: ${markersToShow.length}`;
+      };
+    }
 
-        cluster.addTo(map);
-        allCluster = cluster;
-
-        const b = cluster.getBounds();
-        if (b.isValid()) map.fitBounds(b.pad(0.1));
-
-        // Legend
-        const legend = L.control({ position:'topright' });
-        legend.onAdd = function() {
-          const div = L.DomUtil.create('div','legend');
-          const h = document.createElement('div'); h.textContent = 'Incident Type';
-          h.style.fontWeight='600'; h.style.marginBottom='6px';
-          div.appendChild(h);
-          for (const norm of typeValues) {
-            const row = document.createElement('div'); row.className='row';
-            const sw = document.createElement('span'); sw.className='swatch'; sw.style.background = colors[norm];
-            const lab = document.createElement('span'); lab.textContent = typeLabelMap.get(norm);
-            row.appendChild(sw); row.appendChild(lab); div.appendChild(row);
-          }
-          return div;
-        };
-        legend.addTo(map);
-
-        status.textContent = `Plotted ${features.length} points. Types: ${typeValues.length}`;
-
-        // Filtering
-        typeFilter.addEventListener('change', () => {
-          if (allCluster) map.removeLayer(allCluster);
-          const newCluster = L.markerClusterGroup({ spiderfyOnMaxZoom:true, showCoverageOnHover:false, maxClusterRadius:50 });
-          if (typeFilter.value === '__ALL__') {
-            Object.values(groupsByType).forEach(g => g.eachLayer(m => newCluster.addLayer(m)));
-          } else {
-            groupsByType[typeFilter.value].eachLayer(m => newCluster.addLayer(m));
-          }
-          newCluster.addTo(map);
-          const bb = newCluster.getBounds();
-          if (bb.isValid()) map.fitBounds(bb.pad(0.1));
-          const label = (typeFilter.value === '__ALL__') ? 'ALL types' : `"${typeLabelMap.get(typeFilter.value)}"`;
-          status.textContent = `Showing ${label}. Points: ${newCluster.getLayers().length}`;
-          allCluster = newCluster;
-        });
-      })
-      .catch(err => { console.error(err); status.textContent = `Error: ${err.message}`; });
+    // Handle file selection
+    fileInput.addEventListener('change', async () => {
+      const file = fileInput.files?.[0];
+      if (!file) return;
+      status.textContent = `Reading ${file.name}…`;
+      try {
+        const rows = await readXlsxFromFile(file);
+        await plotFromRows(rows);
+      } catch (err) {
+        console.error(err);
+        status.textContent = `Error: ${err.message}`;
+      }
+    });
   </script>
 </body>
 </html>
